# FFXIVOpcode

./: Cargo.toml
.github/workflows/: rust.yml
src/: disassemble.rs  finder.rs  main.rs  patterns.rs
