[package]
name = "ffxiv_opcode"
version = "0.1.0"
edition = "2021"


[dependencies]
object = { version = "^0.29" }
anyhow = { version = "^1.0" }
tokio = { version = "^1.0", features = ["full"] }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
clap = { version = "^4.1", features = ["derive"] }
capstone = { version = "^0.11" }
memchr = { version = "^2.4" }